main/default/objects/Google_Unique_Country_Code__mdt/Google_Unique_Country_Code__mdt.object-meta.xml
<CustomObject>
    <description>If google auto address returns a unique country code not configured in SF this mapping will be used.</description>
    <label>Google Unique Country Code</label>
    <pluralLabel>Google Unique Country Codes</pluralLabel>
</CustomObject>