main/default/objects/Google_Unique_Country_Code__mdt/fields/Actual_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Actual_State_Code__c</fullName>
    <label>Actual State Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>