main/default/objects/Google_Unique_Country_Code__mdt/fields/Unique_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Country_Code__c</fullName>
    <label>Unique Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>